Monitoring Stack-18-08-26/k8s/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: counter-frontend
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: counter-frontend
  template:
    metadata:
      labels:
        app: counter-frontend
    spec:
      containers:
      - name: counter-frontend
        image: counter-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
